--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <div class="swiper-slide">
                         <div class="feature">
                             <span>01</span>
-                            <img src="../images/rating-feature.png" alt="rating-icon" />
+                            <img src="images/rating-feature.png" alt="rating-icon" />
                             <h4>Have High Rating</h4>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
@@ -328,7 +328,7 @@
                     <div class="swiper-slide">
                         <div class="feature">
                             <span>02</span>
-                            <img src="../images/quiet-hours.png" alt="quiet-hour-icon" />
+                            <img src="images/quiet-hours.png" alt="quiet-hour-icon" />
                             <h4>Quiet Hours</h4>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
@@ -340,7 +340,7 @@
                     <div class="swiper-slide">
                         <div class="feature">
                             <span>03</span>
-                            <img src="../images/address-icon.png" alt="address-icon" />
+                            <img src="images/address-icon.png" alt="address-icon" />
                             <h4>Best Locations</h4>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
@@ -352,7 +352,7 @@
                     <div class="swiper-slide">
                         <div class="feature">
                             <span>04</span>
-                            <img src="../images/free-cancel-icon.png" alt="free-cancel-icon" />
+                            <img src="images/free-cancel-icon.png" alt="free-cancel-icon" />
                             <h4>Free Cancellation</h4>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
@@ -364,7 +364,7 @@
                     <div class="swiper-slide">
                         <div class="feature">
                             <span>05</span>
-                            <img src="../images/payment-options-icon.png" alt="payment-options-icon" />
+                            <img src="images/payment-options-icon.png" alt="payment-options-icon" />
                             <h4>Payment Options</h4>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
@@ -376,7 +376,7 @@
                     <div class="swiper-slide">
                         <div class="feature">
                             <span>06</span>
-                            <img src="../images/offer-icon.png" alt="offer-icon" />
+                            <img src="images/offer-icon.png" alt="offer-icon" />
                             <h4>Special Offers</h4>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
@@ -398,7 +398,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="menu-item">
-                            <img src="../images/eggs-bacon.jpg" alt="eggs-bacon" />
+                            <img src="images/eggs-bacon.jpg" alt="eggs-bacon" />
                             <div>
                                 <h4>Eggs & Bacon</h4>
                                 <p>
@@ -409,7 +409,7 @@
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="../images/tea-coffee.jpg" alt="eggs-bacon" />
+                            <img src="images/tea-coffee.jpg" alt="eggs-bacon" />
                             <div>
                                 <h4>Tea or Coffee</h4>
                                 <p>
@@ -420,7 +420,7 @@
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="../images/Oatmeal-Chia.jpg" alt="Oatmeal-Chia" />
+                            <img src="images/Oatmeal-Chia.jpg" alt="Oatmeal-Chia" />
                             <div>
                                 <h4>Chia Oatmeal</h4>
                                 <p>
@@ -444,7 +444,7 @@
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="../images/mermelada.jpg" alt="mermelada" />
+                            <img src="images/mermelada.jpg" alt="mermelada" />
                             <div>
                                 <h4>Marmalade Selection</h4>
                                 <p>
@@ -455,7 +455,7 @@
                             </div>
                         </div>
                         <div class="menu-item">
-                            <img src="../images/cheese-plate.jpg" alt="cheese-plate" />
+                            <img src="images/cheese-plate.jpg" alt="cheese-plate" />
                             <div>
                                 <h4>Cheese Plates</h4>
                                 <p>
@@ -509,7 +509,7 @@
                 </p>
             </div>
             <div class="item">
-                <img src="../images/categories-icon.png" alt="rocket-icon" />
+                <img src="images/categories-icon.png" alt="rocket-icon" />
                 <p>
                     02k
                     <span class="white">+</span>
@@ -531,8 +531,8 @@
         <img class="background-img" src="../images/footer-background.png" alt="footer-background" />
         <div class="footer-rrss">
             <div class="header-container">
-                <img src="../images/H-footer.png" alt="footer-logo" class="footer-logo" />
-                <img src="../images/Hotel-Miranda.png" alt="footer-title" class="footer-title" />
+                <img src="images/H-footer.png" alt="footer-logo" class="footer-logo" />
+                <img src="images/Hotel-Miranda.png" alt="footer-title" class="footer-title" />
             </div>
             <p class="footer-text">
                 Lorem ipsum dolor sit amet, consect etur adipisicing elit,
