--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 ullamco laboris nisi ut aliquip ex ea commodo consequat you
                 have to understand this.
             </p>
-            <video src="../images/hotel-miranda-video.mp4" autoplay muted controls></video>
+            <video src="images/hotel-miranda-video.mp4" autoplay muted controls></video>
             <button class="btn btn-beige">Book Now</button>
         </div>
 
@@ -528,7 +528,7 @@
     </main>
 
     <footer>
-        <img class="background-img" src="../images/footer-background.png" alt="footer-background" />
+        <img class="background-img" src="images/footer-background.png" alt="footer-background" />
         <div class="footer-rrss">
             <div class="header-container">
                 <img src="images/H-footer.png" alt="footer-logo" class="footer-logo" />
